[gd_scene load_steps=20 format=3 uid="uid://37i3vkcqr8ef"]

[ext_resource type="Script" uid="uid://e8guogssdweh" path="res://code/components/engine.gd" id="1_rrhl7"]
[ext_resource type="PackedScene" uid="uid://4ev7n8xin8g8" path="res://scenes/button3d.tscn" id="2_au7r5"]
[ext_resource type="Texture2D" uid="uid://carh7wcvr4a6b" path="res://textures/less.png" id="3_vdhop"]
[ext_resource type="Texture2D" uid="uid://rsylrmgcr5lb" path="res://textures/more.png" id="4_e64b2"]
[ext_resource type="Script" uid="uid://w74q5f1ednux" path="res://code/anim/rotor.gd" id="5_r7ssg"]
[ext_resource type="PackedScene" uid="uid://c80fsqccc2hnu" path="res://scenes/connection.tscn" id="6_8634w"]
[ext_resource type="PackedScene" uid="uid://djd85005dvf4k" path="res://scenes/components/signal_connection.tscn" id="7_au7r5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_dv5nn"]
size = Vector3(1, 0.7, 0.7)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3ouc1"]
albedo_color = Color(0.26, 0.26, 0.26, 1)

[sub_resource type="BoxMesh" id="BoxMesh_dn7b6"]
material = SubResource("StandardMaterial3D_3ouc1")
size = Vector3(1, 0.7, 0.7)

[sub_resource type="QuadMesh" id="QuadMesh_nhv66"]
size = Vector2(0.25, 0.25)
center_offset = Vector3(0, 0.01, 0)
orientation = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a57g1"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("3_vdhop")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3fxwf"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("4_e64b2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lieb6"]
albedo_color = Color(0.258824, 0.258824, 0.258824, 1)

[sub_resource type="BoxMesh" id="BoxMesh_nhv66"]
size = Vector3(0.1, 0.1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jt3t8"]
size = Vector3(0.02, 0.15, 0.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_lieb6"]
top_radius = 0.08
bottom_radius = 0.08
height = 0.35
radial_segments = 16
rings = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_nhv66"]
size = Vector3(0.1, 0.1, 1.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_au7r5"]
size = Vector3(0.1, 0.6, 0.6)

[node name="Engine" type="Node3D"]
script = ExtResource("1_rrhl7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5)
shape = SubResource("BoxShape3D_dv5nn")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5)
mesh = SubResource("BoxMesh_dn7b6")

[node name="Less" parent="MeshInstance3D" instance=ExtResource("2_au7r5")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.35, 0)
description = "Decrease power"

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/Less"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.00999999, 0)
mesh = SubResource("QuadMesh_nhv66")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_a57g1")

[node name="More" parent="MeshInstance3D" instance=ExtResource("2_au7r5")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.35, 0)
description = "Increase power"

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/More"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0)
mesh = SubResource("QuadMesh_nhv66")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_3fxwf")

[node name="StatusPanel" type="Label3D" parent="MeshInstance3D"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 0.36, 0)
text = "power"
font_size = 24
outline_size = 7

[node name="Beam" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, -0.25, 0)
material_override = SubResource("StandardMaterial3D_lieb6")
mesh = SubResource("BoxMesh_nhv66")
skeleton = NodePath("../..")

[node name="Beam2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, -0.25, 0)
material_override = SubResource("StandardMaterial3D_lieb6")
mesh = SubResource("BoxMesh_nhv66")
skeleton = NodePath("../..")

[node name="Beam3" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.25, 0)
material_override = SubResource("StandardMaterial3D_lieb6")
mesh = SubResource("BoxMesh_nhv66")
skeleton = NodePath("../..")

[node name="Beam4" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0)
material_override = SubResource("StandardMaterial3D_lieb6")
mesh = SubResource("BoxMesh_nhv66")
skeleton = NodePath("../..")

[node name="Rotor" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25, 0.5, 0.5)
script = ExtResource("5_r7ssg")

[node name="Propellor1" type="MeshInstance3D" parent="Rotor"]
transform = Transform3D(0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0, 1, 0, 0, 0.25)
mesh = SubResource("BoxMesh_jt3t8")

[node name="Propellor2" type="MeshInstance3D" parent="Rotor"]
transform = Transform3D(0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 0, 0, -0.25)
mesh = SubResource("BoxMesh_jt3t8")

[node name="Axle" type="MeshInstance3D" parent="Rotor"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.1, 0, 0)
mesh = SubResource("CylinderMesh_lieb6")

[node name="CenterOfMass" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.5)

[node name="Connection" parent="." instance=ExtResource("6_8634w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25)
shape = SubResource("BoxShape3D_nhv66")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.25)
shape = SubResource("BoxShape3D_nhv66")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.25)
shape = SubResource("BoxShape3D_nhv66")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.25)
shape = SubResource("BoxShape3D_nhv66")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.25, 0.25)
shape = SubResource("BoxShape3D_au7r5")

[node name="SignalConnection" parent="." instance=ExtResource("7_au7r5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25)
shape = SubResource("BoxShape3D_nhv66")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.25)
shape = SubResource("BoxShape3D_nhv66")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, 0.25)
shape = SubResource("BoxShape3D_nhv66")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.25)
shape = SubResource("BoxShape3D_nhv66")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0.25, 0.25)
shape = SubResource("BoxShape3D_au7r5")

[connection signal="pressed" from="MeshInstance3D/Less" to="." method="_on_less_pressed"]
[connection signal="pressed" from="MeshInstance3D/More" to="." method="_on_more_pressed"]
[connection signal="changed" from="SignalConnection" to="." method="_on_signal_connection_changed"]
